調整歷史開獎搜索區域按鈕佈局
- 調整搜索區域佈局：日期搜索（左）-> 期號搜索（中）-> 按鈕組（右）
- 今日開獎和清除搜索按鈕改為垂直並排
- 添加 action-buttons 容器，設定 flex-direction: column
- 按鈕間距 gap: 4px，保持緊湊排列
- 搜索操作區域使用 flex-direction: column 垂直對齊
- 同步修改到 frontend 和 deploy 目錄

--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -3187,9 +3187,15 @@
 
         .search-actions {
             display: flex;
-            gap: 4px;
+            flex-direction: column;
             flex-shrink: 0;
             margin-left: 8px;
+        }
+
+        .action-buttons {
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
         }
 
         .search-btn, .clear-btn {
@@ -6585,8 +6591,10 @@
                             <input type="text" v-model="historySearchPeriod" placeholder="输入期数" @input="searchHistoryByPeriod">
                         </div>
                         <div class="search-actions">
-                            <button class="search-btn" @click="searchTodayHistory">今日开奖</button>
-                            <button class="clear-btn" @click="clearHistorySearch">清除搜索</button>
+                            <div class="action-buttons">
+                                <button class="search-btn" @click="searchTodayHistory">今日开奖</button>
+                                <button class="clear-btn" @click="clearHistorySearch">清除搜索</button>
+                            </div>
                         </div>
                     </div>
                 </div>
