--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2167,6 +2167,7 @@
             font-size: 12px;
             font-weight: 500;
             margin-bottom: 4px;
+            padding-left: 8px;
         }
 
         /* 響應式調整：較大螢幕時可以橫向排列 */
@@ -2193,6 +2194,7 @@
             justify-content: space-between;
             width: 100%;
             box-sizing: border-box;
+            padding-left: 8px;
         }
 
         /* 🔥 開獎紀錄中的球號樣式 - 響應式設計，確保所有球號都能顯示 */
