--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2167,7 +2167,7 @@
             font-size: 12px;
             font-weight: 500;
             margin-bottom: 4px;
-            padding-left: 8px;
+            padding-left: 4px;
         }
 
         /* 響應式調整：較大螢幕時可以橫向排列 */
@@ -2194,7 +2194,7 @@
             justify-content: space-between;
             width: 100%;
             box-sizing: border-box;
-            padding-left: 8px;
+            padding-left: 4px;
         }
 
         /* 🔥 開獎紀錄中的球號樣式 - 響應式設計，確保所有球號都能顯示 */
@@ -3260,7 +3260,7 @@
 
         .record {
             margin-top: 16px;        /* 與上一筆／搜尋區拉開距離 */
-            padding-left: 0;         /* 確保左邊完全對齊 */
+            padding-left: 16px;      /* 增加左側間距 */
         }
 
         .record:first-child {
