修改週計算邏輯 - 週一為開始日
- 修改代理平台報表查詢的週計算邏輯
- 本週：從週一到週日（不是週日到週六）
- 上週：從上週一到上週日
- 修改 setDateRange 和 setLoginLogDateRange 函數
- 統一使用週一作為一週的開始日

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -1475,7 +1475,7 @@
                                     <label class="form-label fw-bold">快速查询</label>
                                     <div class="btn-group w-100" role="group">
                                         <button type="button" class="btn btn-outline-primary" @click="setDateRange('today')">今日</button>
-                                        <button type="button" class="btn btn-outline-primary" @click="setDateRange('yesterday')">昨日</button>
+                                        <button type="button" class="btn btn-outline-primary" @click="setDateRange('lastWeek')">上周</button>
                                         <button type="button" class="btn btn-outline-primary" @click="setDateRange('week')">本周</button>
                                         <button type="button" class="btn btn-outline-primary" @click="setDateRange('month')">本月</button>
                                     </div>
