--- a/deploy/agent/frontend/index.html
+++ b/deploy/agent/frontend/index.html
@@ -1475,7 +1475,7 @@
                                     <label class="form-label fw-bold">快速查询</label>
                                     <div class="btn-group w-100" role="group">
                                         <button type="button" class="btn btn-outline-primary" @click="setDateRange('today')">今日</button>
-                                        <button type="button" class="btn btn-outline-primary" @click="setDateRange('yesterday')">昨日</button>
+                                        <button type="button" class="btn btn-outline-primary" @click="setDateRange('lastWeek')">上周</button>
                                         <button type="button" class="btn btn-outline-primary" @click="setDateRange('week')">本周</button>
                                         <button type="button" class="btn btn-outline-primary" @click="setDateRange('month')">本月</button>
                                     </div>
